--- a/homework_2/comments.html
+++ b/homework_2/comments.html
@@ -28,31 +28,31 @@
     <table border='1' cellspasing='20' cellpadding='10'>
       <tr>
         <td>
-          <figure><img src="vk.com/photos_1222331_1?all=1" </figure></td>
+          <figure><img src="pics/download.jpg" width="200" height="200"> </figure></td>
         <td><a href="vk.com/artemida">Артём</a></td>
         <td>это текст отзыва, оставьте свой отзыв в этом окошке купил телефон, попал в аварию, мой Aiphone сломался =( а потом я узнал про ЧИНИТЕЛИ inc. Они починили мой телефон и даже сделали скидку в 2 рубля</td>
       </tr>
       <tr>
         <td>
-          <figure><img src="vk.com/photos_223416631_1?all=1" </figure></td>
+          <figure><img src="pics/krosh.jpg" width="200" height="200"> </figure></td>
         <td><a href="vk.com/223416631">Питер Петигрю</a></td>
         <td>иду я как-то по улице и тут, как бац мне по голове, смотрю, а это телефон, хороший такой, от компании Xiamo, -"Эх, а я ведь всегда мечтал о своём Xiamo", подумал я, заменил корпус, работает хорошо</td>
       </tr>
       <tr>
         <td>
-          <figure><img src="vk.com/photos_824612831_1?all=1" </figure></td>
+          <figure><img src="pics/bash.jpg" width="200" height="200"> </figure></td>
         <td><a href="vk.com/824612831">Анатолий</a></td>
         <td>прихожу я домой, начинаю проверять карманы, а карманов у меня много, ну думаю, чего уж там возиться, начал прыгать, кувыркаться, да так сильно, что карманы расстегнулись и всё выпало наружу. GG снова со мной, благодаря ЧИНИТЕЛИ inc</td>
       </tr>
       <tr>
         <td>
-          <figure><img src="vk.com/photos_7442851_1?all=1" </figure></td>
+          <figure><img src="pics/mortred.png" width="200" height="200"> </figure></td>
         <td><a href="vk.com/7442851">Татьяна</a></td>
         <td>варю я значит суп, а в квартире жарко, открываю форточку и наслаждаюсь бризом, одна из перелётных птиц решила заглянуть ко мне на чай, ах, как жаль, что в тот момент я была с головой в телефоне, в итоге пришлось заменить динамик и 2 ногтя</td>
       </tr>
       <tr>
         <td>
-          <figure><img src="vk.com/photos_3129412_1?all=1" </figure></td>
+          <figure><img src="pics/foxxy.jpg" width="200" height="200"> </figure></td>
         <td><a href="vk.com/3129412">Дрэд</a></td>
         <td>обычный день на работе: отстреливаю нарушителей закона, ловлю беглых преступников, выслеживаю наркодиллеров.... так я думал. *Фьюю!* пуля пролетела мимо виска, такого я не ожидал, снайпер,северо-запад, 200 метров. Вытаскиваю драгунов из-за спины...
           слишком быстро, задел проходящую мимо бабушку, её телефон разбился при падении, экран ей заменили всё хорошо</td>
