--- a/homework_2/index.html
+++ b/homework_2/index.html
@@ -3,8 +3,8 @@
 <html>
   <meta charset="UTF-8">
   <title>Ремонт мобильных телефонов</title>
-
   <body>
+  <figure><img src="pics/Chiniteli.jpg" width="350" height="200"><figure>
     <div>
       <h1>
         Чинители inc
