added missing <head>

--- a/homework_2/index.html
+++ b/homework_2/index.html
@@ -1,8 +1,10 @@
 <!Doctype html>
 
 <html>
+<head>
   <meta charset="UTF-8">
   <title>Ремонт мобильных телефонов</title>
+  <head>
   <body>
   <figure><img src="pics/Chiniteli.jpg" width="350" height="200"><figure>
     <div>
