--- a/homework_2/index.html
+++ b/homework_2/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Ремонт мобильных телефонов</title>
-  <head>
+  </head>
   <body>
   <figure><img src="pics/Chiniteli.jpg" width="350" height="200"><figure>
     <div>
