--- a/homework_2/index.html
+++ b/homework_2/index.html
@@ -64,14 +64,14 @@
             <td>Электронная почта</td>
           </tr>
           <tr>
-            <td>8-800-555-35-35</td>
+            <td><a href="tel:88005553535">8-800-555-35-35</a></td>
             <td>Ул. Кировоградская, Д. 25</td>
-            <td>CHINITELI@gmail.com</td>
+            <td><a href="mailto:CHINITELI@gmail.com">CHINITELI@gmail.com</a></td>
           </tr>
           <tr>
-            <td>+375(33)-123-33-635</td>
+            <td><a href="tel:+3753312333635">+375(33)-123-33-635</a></td>
             <td>Ул. Минская, Д.17, офис 17</td>
-            <td>IMicrowavedMyPhone@apple.com</td>
+            <td><a href="mailto:IMicrowavedMyPhone@apple.com">IMicrowavedMyPhone@apple.com</a></td>
           </tr>
         </tbody>
       </table>
