filled missing pics; added quick call; final version?

--- a/homework2_task2/index.html
+++ b/homework2_task2/index.html
@@ -17,8 +17,8 @@
       <table border='2' cellspacing='5' cellpadding='10'>
         <tr>
           <td>
-            <h2><a href="/product.html">
-              logishpeh-17244
+            <h2><a href="product.html">
+              Cannon-17244
               </a>
             </h2>
             <figure><img src="pics/1.jpg" width="300" height="300"></figure>
@@ -42,17 +42,17 @@
         </tr>
         <tr>
           <td>
-            <h2><a href="/product.html">
-              logishpeh-17244
+            <h2><a href="product.html">
+              sampler
               </a>
             </h2>
-            <figure><img src="pics/1.jpg" width="270" height="250"></figure>
+            <figure><img src="pics/2.jpg" width="270" height="250"></figure>
           </td>
           <td>
-            Принтор
+            необычный принтор
           </td>
           <td>
-            так назывемая печатная машинка будущего
+            особый принтор
           </td>
           <td>
             <figure>
@@ -67,17 +67,17 @@
         </tr>
         <tr>
           <td>
-            <h2><a href="/product.html">
-              logishpeh-17244
+            <h2><a href="product.html">
+              checkboxer
               </a>
             </h2>
-            <figure><img src="pics/1.jpg" width="250" height="270"></figure>
+            <figure><img src="pics/3.jpg" width="250" height="270"></figure>
           </td>
           <td>
-            Принтор
+            чековый аппарат
           </td>
           <td>
-            так назывемая печатная машинка будущего
+            выдаёт чеки
           </td>
           <td>
             <figure>
@@ -92,17 +92,17 @@
         </tr>
         <tr>
           <td>
-            <h2><a href="/product.html">
-              logishpeh-17244
+            <h2><a href="product.html">
+              kasparsky-01
               </a>
             </h2>
-            <figure><img src="pics/1.jpg" width="200" height="200"></figure>
+            <figure><img src="pics/4.jpg" width="200" height="200"></figure>
           </td>
           <td>
-            Принтор
+            шреддер
           </td>
           <td>
-            так назывемая печатная машинка будущего
+            режет бумагу
           </td>
           <td>
             <figure>
@@ -117,17 +117,17 @@
         </tr>
         <tr>
           <td>
-            <h2><a href="/product.html">
-              logishpeh-17244
+            <h2><a href="product.html">
+              kepler-1844
               </a>
             </h2>
-            <figure><img src="pics/1.jpg" width="300" height="100"></figure>
+            <figure><img src="pics/5.jpg" width="300" height="100"></figure>
           </td>
           <td>
-            Принтор
+            картридж
           </td>
           <td>
-            так назывемая печатная машинка будущего
+            картридж для принторов
           </td>
           <td>
             <figure>
@@ -142,17 +142,17 @@
         </tr>
         <tr>
           <td>
-            <h2><a href="/product.html">
-              logishpeh-17244
+            <h2><a href="product.html">
+              phillips-221114
               </a>
             </h2>
-            <figure><img src="pics/1.jpg" width="150" height="300"></figure>
+            <figure><img src="pics/6.jpg" width="150" height="300"></figure>
           </td>
           <td>
-            Принтор
+            холодильная камера
           </td>
           <td>
-            так назывемая печатная машинка будущего
+            охлаждение продуктов
           </td>
           <td>
            <figure>
@@ -167,17 +167,17 @@
         </tr>
         <tr>
           <td>
-            <h2><a href="/product.html">
-              logishpeh-17244
+            <h2><a href="product.html">
+              retter-02
               </a>
             </h2>
-            <figure><img src="pics/1.jpg" width="300" height="300"></figure>
+            <figure><img src="pics/7.jpg" width="300" height="300"></figure>
           </td>
           <td>
-            Принтор
+            колонки
           </td>
           <td>
-            так назывемая печатная машинка будущего
+            излучают звуковые волны
           </td>
           <td>
            <figure>
@@ -192,11 +192,11 @@
         </tr>
         <tr>
           <td>
-            <h2><a href="/product.html">
-              logishpeh-17244
+            <h2><a href="product.html">
+              Cannon-14223
               </a>
             </h2>
-            <figure><img src="pics/1.jpg" width="300" height="300"></figure>
+            <figure><img src="pics/8.jpg" width="300" height="300"></figure>
           </td>
           <td>
             Принтор
@@ -217,11 +217,11 @@
         </tr>
         <tr>
           <td>
-            <h2><a href="/product.html">
-              logishpeh-17244
+            <h2><a href="product.html">
+              Katiusha
               </a>
             </h2>
-            <figure><img src="pics/1.jpg" width="300" height="300"></figure>
+            <figure><img src="pics/9.jpg" width="300" height="300"></figure>
           </td>
           <td>
             Принтор
@@ -242,14 +242,14 @@
         </tr>
         <tr>
           <td>
-            <h2><a href="/product.html">
-              logishpeh-17244
+            <h2><a href="product.html">
+              Cannon-111111
               </a>
             </h2>
-            <figure><img src="pics/1.jpg" width="300" height="300"></figure>
+            <figure><img src="pics/10.jpg" width="300" height="300"></figure>
           </td>
           <td>
-            Принтор
+            Струйный Принтор
           </td>
           <td>
             так назывемая печатная машинка будущего
@@ -270,13 +270,13 @@
     <footer>
       <table border='0' cellspacing='35' cellpadding='1'>
         <tr>
-          <td>МТС (+235)-422-22-22</td>
+          <td>МТС <a href="tel:+2354222222">(+235)-422-22-22</a></td>
           <td>ул.Петровско-Разумовская, д.22 (Самовывоз)</td>
           <td>пн-пт, с 9:00 до 21:00</td>
         </tr>
         <tr>
           <td>
-            городской 143-17-20
+            городской <a href="tel:8-0171431720"> 143-17-20
           </td>
           <td>
             ул. Слободская, 211 (подъезд со стороны ТЦ "Ангельский")
