--- a/homework2_task2/product.html
+++ b/homework2_task2/product.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="UTF-8">
     <title>
-      Titlename
+      Cannon-17244
     </title>
   </head>
 
@@ -15,7 +15,7 @@
         Вы попали к нам на Стройплощадку!<br> наш сайт предоставляет оргтех-товары по доступным ценам с доставкой по городу
       </h1>
     </div>
-    <a href="/">
+    <a href="index.html">
       <h3>
         Вернуться в каталог</h3>
     </a>
@@ -54,13 +54,13 @@
     <footer>
       <table border='0' cellspacing='35' cellpadding='1'>
         <tr>
-          <td>МТС (+235)-422-22-22</td>
+          <td>МТС <a href="tel:+2354222222">(+235)-422-22-22</a></td>
           <td>ул.Петровско-Разумовская, д.22 (Самовывоз)</td>
           <td>пн-пт, с 9:00 до 21:00</td>
         </tr>
         <tr>
           <td>
-            городской 143-17-20
+            городской <a href="tel:8-0171431720"> 143-17-20
           </td>
           <td>
             ул. Слободская, 211 (подъезд со стороны ТЦ "Ангельский")
