added form for buying product

--- a/homework2_task2/product.html
+++ b/homework2_task2/product.html
@@ -51,6 +51,24 @@
         </tr>
       </table>
     </div>
+    <div>
+      <br>
+      <form>
+        <label>Количество товара:<br>
+          <input type="text" name="quantity" placeholder="1" required>
+        </label><br><br>
+        <label>Адрес доставки:<br>
+          <input type="text" name="adress" placeholder="город, улица, дом, кв" required>
+        </label><br><br>
+        <label>Контактный телефон:<br>
+          <input type="text" name="call number" placeholder="пример: +375-33-123-22-33" required>
+        </label><br><br>
+        <label>Комментарий (не обязательно):<br>
+          <textarea rows="10" cols="50"></textarea>
+        </label><br>
+        <button action="submit">Заказать</button>
+      </form>
+    </div><br>
     <footer>
       <table border='0' cellspacing='35' cellpadding='1'>
         <tr>
