--- a/homework_2/comments.html
+++ b/homework_2/comments.html
@@ -62,7 +62,7 @@
     <br>
     <div>
       Оставьте ваш отзыв!
-      <form>
+      <form action="handler.php" method="post">
         <br>
         <label>введите ваше имя:<br>
           <input type="text" name="name" placeholder="Например:Артём" required>
