form method added

--- a/homework2_task2/product.html
+++ b/homework2_task2/product.html
@@ -53,7 +53,7 @@
     </div>
     <div>
       <br>
-      <form>
+      <form action="handler.php" method="post">
         <label>Количество товара:<br>
           <input type="text" name="quantity" placeholder="1" required>
         </label><br><br>
