--- a/homework_2/index.html
+++ b/homework_2/index.html
@@ -6,7 +6,7 @@
   <title>Ремонт мобильных телефонов</title>
   </head>
   <body>
-  <figure><img src="pics/Chiniteli.jpg" width="350" height="200"><figure>
+  <figure><img src="pics/Chiniteli.jpg" width="350" height="200"></figure>
     <div>
       <h1>
         Чинители inc
