--- a/homework_3/feed.html
+++ b/homework_3/feed.html
@@ -2,9 +2,156 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8">
-  <title>Новости</title>
-  <figure><img src="pics/123.jpg" width="200" height="200"></figure>
-  <p>Sampletext</p>
-</head>
+  <title>Новостная лента</title>
+  <h1>Instagram</h1>
+  <figure><img src="pics/123.jpg" width="150" height="90" alt="логотип"></figure>
+</head><br>
 <body>
+  <button><a href="photo-add.html">Создать пост</a></button><br><br>
   <div>
+  	<table align="left" width="1280" height="720" border="1" cellspacing="1" cellpadding="30">
+  		<tr>
+  			<td>
+  				БэдФанат
+  			</td>
+  			<td>
+  				<iframe width="800" height="500" src="https://www.youtube.com/embed/FbrUZhX_haQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  			</td>
+  			<td>
+  				умиляемся кинематографу <a href="feed.html">#Бэда_в_президенты</a>
+  			</td>
+  		</tr>
+  		<tr>
+  			<td>
+  				Иван не Иванов
+  			</td>
+  			<td>
+  				Здорово! так их!
+  			</td>
+  		</tr>
+</table>
+<form>
+	<label>
+		<textarea rows="8" cols="157" placeholder="Оставьте свой комментарий здесь!"></textarea>
+	</label>
+	<button>Оставить комментарий</button>
+</form>
+</div><br>
+<div>
+  	<table align="left" width="1280" height="720" border="1" cellspacing="1" cellpadding="50">
+  		<tr>
+  			<td>
+  				Лысый Чел
+  			</td>
+  			<td>
+  				<iframe width="800" height="500" src="https://www.youtube.com/embed/o268qbb_0BM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  			</td>
+  			<td>
+  				рассказывает ерунду, но слушать интересно :)<a href="feed.html">#просвящаемся</a>
+  			</td>
+  		</tr>
+  		<tr>
+  			<td>
+  				Кудряш
+  			</td>
+  			<td>
+  				думаешь раз он лысеет, то умнее меня?? х(*-*)х
+  			</td>
+  		</tr>
+</table>
+<form>
+	<label>
+		<textarea rows="8" cols="157" placeholder="Оставьте свой комментарий здесь!"></textarea>
+	</label>
+	<button>Оставить комментарий</button>
+</form>
+</div><br>
+<div>
+  	<table align="left" width="1280" height="720" border="1" cellspacing="1" cellpadding="50">
+  		<tr>
+  			<td>
+  				idoopz
+  			</td>
+  			<td>
+  				<iframe width="800" height="500" src="https://www.youtube.com/embed/W5moUUFhmZM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  			</td>
+  			<td>
+  				в чём разница между двумя картинками? <a href="feed.html">#непонятно</a>
+  			</td>
+  		</tr>
+  		<tr>
+  			<td>
+  				задумчивый эмоджи
+  			</td>
+  			<td>
+  				хмм....
+  			</td>
+  		</tr>
+</table>
+<form>
+	<label>
+		<textarea rows="8" cols="157" placeholder="Оставьте свой комментарий здесь!"></textarea>
+	</label>
+	<button>Оставить комментарий</button>
+</form>
+</div><br>
+<div>
+  	<table align="left" width="1280" height="720" border="1" cellspacing="1" cellpadding="50">
+  		<tr>
+  			<td>
+  				АнимеЧел
+  			</td>
+  			<td>
+  				<iframe width="800" height="500" src="https://www.youtube.com/embed/MqDlfqmUlcg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  			</td>
+  			<td>
+  				крутяк <a href="feed.html">#аниме</a>
+  			</td>
+  		</tr>
+  		<tr>
+  			<td>
+  				НТВ
+  			</td>
+  			<td>
+  				А ну пошёл смотреть следаков!
+  			</td>
+  		</tr>
+</table>
+<form>
+	<label>
+		<textarea rows="8" cols="157" placeholder="Оставьте свой комментарий здесь!"></textarea>
+	</label>
+	<button>Оставить комментарий</button>
+</form>
+</div><br>
+<div>
+  	<table align="left" width="1280" height="720" border="1" cellspacing="1" cellpadding="25">
+  		<tr>
+  			<td>
+  				Мультофаг
+  			</td>
+  			<td>
+  				<iframe width="800" height="500" src="https://www.youtube.com/embed/v3_KOGaqhdw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  			</td>
+  			<td>
+  				играл я в паразита <a href="feed.html">#паразит</a>
+  			</td>
+  		</tr>
+  		<tr>
+  			<td>
+  				НТВ
+  			</td>
+  			<td>
+  				И ты тоже быстро пошёл! там мухтар начинается <a href="feed">#мухтар_вернулся</a>
+  			</td>
+  		</tr>
+</table>
+<form>
+	<label>
+		<textarea rows="8" cols="157" placeholder="Оставьте свой комментарий здесь!"></textarea>
+	</label>
+	<button>Оставить комментарий</button>
+</form>
+</div>
+</body>
+</html>
