no errors except table usage instead of CSS

--- a/homework_2/index.html
+++ b/homework_2/index.html
@@ -1,12 +1,12 @@
 <!Doctype html>
 
-<html>
+<html lang="ru">
 <head>
   <meta charset="UTF-8">
   <title>Ремонт мобильных телефонов</title>
   </head>
   <body>
-  <figure><img src="pics/Chiniteli.jpg" width="350" height="200"></figure>
+  <figure><img src="pics/Chiniteli.jpg" width="350" height="200" alt="логотип"></figure>
     <div>
       <h1>
         Чинители inc
@@ -15,17 +15,17 @@
     <div>
       <ul>
         <li>
-          <header><a href="#Наши Услуги">Услуги</a></header>
+          <header><a href="#Наши_Услуги" title="Раздел услуг">Услуги</a></header>
         </li>
         <li>
-          <header><a href="#Устройства которые мы ремонтируем">Устройства</a>
+          <header><a href="#Устройства_которые_мы_ремонтируем" title="Раздел устройств">Устройства</a>
           </header>
         </li>
         <li>
-          <header><a href="/comments.html">Отзывы</a></header>
+          <header><a href="/comments.html" title="Отзывы">Отзывы</a></header>
         </li>
         <li>
-          <header><a href="#Связаться с нами">Связаться с нами</a></header>
+          <header><a href="#Связаться_с_нами" title="Наши контакты">Связаться с нами</a></header>
         </li>
       </ul>
     </div>
