no errors except CSS usage and no altattr on star.jpg

--- a/homework2_task2/index.html
+++ b/homework2_task2/index.html
@@ -1,6 +1,6 @@
 <!Doctype html>
 
-<html>
+<html lang="ru">
 
   <head>
     <meta charset="UTF-8">
@@ -17,11 +17,11 @@
       <table border='2' cellspacing='5' cellpadding='10'>
         <tr>
           <td>
-            <h2><a href="product.html">
+            <h2><a href="product.html" title="Подробно о товаре/Заказать">
               Cannon-17244
               </a>
             </h2>
-            <figure><img src="pics/1.jpg" width="300" height="300"></figure>
+            <figure><img src="pics/1.jpg" width="300" height="300" alt="принтер"></figure>
           </td>
           <td>
             Принтор
@@ -42,11 +42,11 @@
         </tr>
         <tr>
           <td>
-            <h2><a href="product.html">
+            <h2><a href="product.html" title="Подробно о товаре/Заказать">
               sampler
               </a>
             </h2>
-            <figure><img src="pics/2.jpg" width="270" height="250"></figure>
+            <figure><img src="pics/2.jpg" width="270" height="250" alt="принтер"></figure>
           </td>
           <td>
             необычный принтор
@@ -67,11 +67,11 @@
         </tr>
         <tr>
           <td>
-            <h2><a href="product.html">
+            <h2><a href="product.html" title="Подробно о товаре/Заказать">
               checkboxer
               </a>
             </h2>
-            <figure><img src="pics/3.jpg" width="250" height="270"></figure>
+            <figure><img src="pics/3.jpg" width="250" height="270" alt="чековый аппарат"></figure>
           </td>
           <td>
             чековый аппарат
@@ -92,11 +92,11 @@
         </tr>
         <tr>
           <td>
-            <h2><a href="product.html">
+            <h2><a href="product.html" title="Подробно о товаре/Заказать">
               kasparsky-01
               </a>
             </h2>
-            <figure><img src="pics/4.jpg" width="200" height="200"></figure>
+            <figure><img src="pics/4.jpg" width="200" height="200" alt="шреддер"></figure>
           </td>
           <td>
             шреддер
@@ -117,11 +117,11 @@
         </tr>
         <tr>
           <td>
-            <h2><a href="product.html">
+            <h2><a href="product.html" title="Подробно о товаре/Заказать">
               kepler-1844
               </a>
             </h2>
-            <figure><img src="pics/5.jpg" width="300" height="100"></figure>
+            <figure><img src="pics/5.jpg" width="300" height="100" alt="картридж"></figure>
           </td>
           <td>
             картридж
@@ -142,11 +142,11 @@
         </tr>
         <tr>
           <td>
-            <h2><a href="product.html">
+            <h2><a href="product.html" title="Подробно о товаре/Заказать">
               phillips-221114
               </a>
             </h2>
-            <figure><img src="pics/6.jpg" width="150" height="300"></figure>
+            <figure><img src="pics/6.jpg" width="150" height="300" alt="холодильная камера"></figure>
           </td>
           <td>
             холодильная камера
@@ -167,11 +167,11 @@
         </tr>
         <tr>
           <td>
-            <h2><a href="product.html">
+            <h2><a href="product.html" title="Подробно о товаре/Заказать">
               retter-02
               </a>
             </h2>
-            <figure><img src="pics/7.jpg" width="300" height="300"></figure>
+            <figure><img src="pics/7.jpg" width="300" height="300" alt="колонки"></figure>
           </td>
           <td>
             колонки
@@ -192,11 +192,11 @@
         </tr>
         <tr>
           <td>
-            <h2><a href="product.html">
+            <h2><a href="product.html" title="Подробно о товаре/Заказать">
               Cannon-14223
               </a>
             </h2>
-            <figure><img src="pics/8.jpg" width="300" height="300"></figure>
+            <figure><img src="pics/8.jpg" width="300" height="300" alt="принтер"></figure>
           </td>
           <td>
             Принтор
@@ -217,11 +217,11 @@
         </tr>
         <tr>
           <td>
-            <h2><a href="product.html">
+            <h2><a href="product.html" title="Подробно о товаре/Заказать">
               Katiusha
               </a>
             </h2>
-            <figure><img src="pics/9.jpg" width="300" height="300"></figure>
+            <figure><img src="pics/9.jpg" width="300" height="300" alt="принтер"></figure>
           </td>
           <td>
             Принтор
@@ -242,11 +242,11 @@
         </tr>
         <tr>
           <td>
-            <h2><a href="product.html">
+            <h2><a href="product.html" title="Подробно о товаре/Заказать">
               Cannon-111111
               </a>
             </h2>
-            <figure><img src="pics/10.jpg" width="300" height="300"></figure>
+            <figure><img src="pics/10.jpg" width="300" height="300" alt="Струйный принтер"></figure>
           </td>
           <td>
             Струйный Принтор
@@ -270,13 +270,19 @@
     <footer>
       <table border='0' cellspacing='35' cellpadding='1'>
         <tr>
-          <td>МТС <a href="tel:+2354222222">(+235)-422-22-22</a></td>
-          <td>ул.Петровско-Разумовская, д.22 (Самовывоз)</td>
-          <td>пн-пт, с 9:00 до 21:00</td>
+          <td>
+            МТС <a href="tel:+2354222222">(+235)-422-22-22</a>
+          </td>
+          <td>
+          ул.Петровско-Разумовская, д.22 (Самовывоз)
+        </td>
+          <td>
+          пн-пт, с 9:00 до 21:00
+        </td>
         </tr>
         <tr>
           <td>
-            городской <a href="tel:8-0171431720"> 143-17-20
+            городской <a href="tel:8-0171431720"> 143-17-20</a>
           </td>
           <td>
             ул. Слободская, 211 (подъезд со стороны ТЦ "Ангельский")
