--- a/homework2_task2/product.html
+++ b/homework2_task2/product.html
@@ -1,6 +1,6 @@
 <!Doctype html>
 
-<html>
+<html lang="ru">
 
   <head>
     <meta charset="UTF-8">
@@ -15,7 +15,7 @@
         Вы попали к нам на Стройплощадку!<br> наш сайт предоставляет оргтех-товары по доступным ценам с доставкой по городу
       </h1>
     </div>
-    <a href="index.html">
+    <a href="index.html" title="Вернуться на главную страницу">
       <h3>
         Вернуться в каталог</h3>
     </a>
@@ -33,7 +33,7 @@
             </figure>
           </td>
           <td>
-            <figure><img src="pics/1.jpg" width="200" height="200"></figure>
+            <figure><img src="pics/1.jpg" width="200" height="200" alt="принтер"></figure>
           </td>
           <td>
             Масса: 6 Кг
@@ -53,7 +53,7 @@
     </div>
     <div>
       <br>
-      <form action="handler.php" method="post">
+      <form action="product.html" method="post">
         <label>Количество товара:<br>
           <input type="text" name="quantity" placeholder="1" required>
         </label><br><br>
@@ -66,19 +66,24 @@
         <label>Комментарий (не обязательно):<br>
           <textarea rows="10" cols="50"></textarea>
         </label><br>
-        <button action="submit">Заказать</button>
+        <button>Заказать</button>
       </form>
     </div><br>
     <footer>
       <table border='0' cellspacing='35' cellpadding='1'>
         <tr>
-          <td>МТС <a href="tel:+2354222222">(+235)-422-22-22</a></td>
-          <td>ул.Петровско-Разумовская, д.22 (Самовывоз)</td>
-          <td>пн-пт, с 9:00 до 21:00</td>
+          <td>
+            МТС <a href="tel:+2354222222">(+235)-422-22-22</a>
+          </td>
+          <td>
+            ул.Петровско-Разумовская, д.22 (Самовывоз)
+          </td>
+          <td>пн-пт, с 9:00 до 21:00
+          </td>
         </tr>
         <tr>
           <td>
-            городской <a href="tel:8-0171431720"> 143-17-20
+            городской <a href="tel:8-0171431720"> 143-17-20</a>
           </td>
           <td>
             ул. Слободская, 211 (подъезд со стороны ТЦ "Ангельский")
