no good looking buttons allowed

--- a/homework_3/photo-add.html
+++ b/homework_3/photo-add.html
@@ -3,17 +3,19 @@
 <head>
   <meta charset="utf-8">
   <title>Создать пост</title>
-  <h1>Instagram</h1>
-  <figure><img src="pics/123.jpg" width="150" height="90" alt="логотип"></figure>
   </head>
-<body><br>
-  <button><a href="feed.html">Вернутья в ленту</a></button><br><br>
+<body>
+  <h1>Instagram</h1>
+  <figure>
+    <img src="pics/123.jpg" width="150" height="90" alt="логотип">
+  </figure><br>
+  <a href="feed.html"><button>Вернутья в ленту</button></a><br><br>
   <form action="feed.html" method="post">
     <label>ваш комментарий (не обязательно)<br>
       <textarea cols="40" rows="10"></textarea>
     </label><br>
     <label>загрузить файл
-    <input type="file" name="file" accept=".jpg .png .mp4" required>
+    <input type="file" name="file" accept=".jpg_.png_.mp4" required>
   </label><br><br>
     <button>Запостить!</button>
   </form>
