no errors found, yay!

--- a/homework_3/index.html
+++ b/homework_3/index.html
@@ -3,11 +3,12 @@
 <head>
   <meta charset="utf-8">
   <title>Добро пожаловать</title>
-  <h1>Instagram</h1>
-  <figure><img src="pics/123.jpg" width="150" height="90" alt="логотип"></figure>
 </head>
 <body>
-<br>
+  <h1>Instagram</h1>
+  <figure>
+    <img src="pics/123.jpg" width="150" height="90" alt="логотип">
+  </figure><br>
 <div>
 	Вход в аккаунт
   <form action="feed.html" method="post">
