no CSS no <button>+<a> allowed

--- a/homework_3/feed.html
+++ b/homework_3/feed.html
@@ -3,11 +3,14 @@
 <head>
   <meta charset="utf-8">
   <title>Новостная лента</title>
-  <h1>Instagram</h1>
-  <figure><img src="pics/123.jpg" width="150" height="90" alt="логотип"></figure>
-</head><br>
+</head>
 <body>
-  <button><a href="photo-add.html">Создать пост</a></button><br><br>
+	<h1>Instagram</h1>
+  <figure>
+  	<img src="pics/123.jpg" width="150" height="90" alt="логотип">
+  </figure><br>
+  <h2>Новостная лента!</h2>
+  <a href="photo-add.html"><button>Создать пост</button></a><br><br>
   <div>
   	<table align="left" width="1280" height="720" border="1" cellspacing="1" cellpadding="30">
   		<tr>
