--- a/homework_2/comments.html
+++ b/homework_2/comments.html
@@ -12,51 +12,96 @@
     <div>
       <ul>
         <li>
-          <header><a href="index.html#Наши_Услуги" title="Раздел услуг">Услуги</a></header>
-        </li>
-        <li>
-          <header><a href="index.html#Устройства_которые_мы_ремонтируем" title="Раздел устройств">Устройства</a>
+          <header>
+            <a href="index.html#Наши_Услуги" title="Раздел услуг">Услуги
+            </a>
           </header>
         </li>
         <li>
-          <header><a href="comments.html" title="Отзывы">Отзывы</a></header>
+          <header>
+            <a href="index.html#Устройства_которые_мы_ремонтируем" title="Раздел устройств">
+              Устройства
+            </a>
+          </header>
         </li>
         <li>
-          <header><a href="index.html#Связаться_с_нами" title="Наши контакты">Связаться с нами</a></header>
+          <header>
+            <a href="comments.html" title="Отзывы">
+              Отзывы
+            </a>
+          </header>
+        </li>
+        <li>
+          <header>
+            <a href="index.html#Связаться_с_нами" title="Наши контакты">
+              Связаться с нами
+            </a>
+        </header>
         </li>
       </ul>
     </div>
     <table border='1' cellspasing='20' cellpadding='10'>
       <tr>
         <td>
-          <figure><img src="pics/download.jpg" width="200" height="200" alt="картинка профиля"> </figure></td>
-        <td><a href="vk.com/artemida">Артём</a></td>
-        <td>это текст отзыва, оставьте свой отзыв в этом окошке купил телефон, попал в аварию, мой Aiphone сломался =( а потом я узнал про ЧИНИТЕЛИ inc. Они починили мой телефон и даже сделали скидку в 2 рубля</td>
+          <figure>
+            <img src="pics/download.jpg" width="200" height="200" alt="картинка профиля">
+          </figure>
+        </td>
+        <td>
+          <a href="vk.com/artemida">Артём</a>
+        </td>
+        <td>
+        это текст отзыва, оставьте свой отзыв в этом окошке купил телефон, попал в аварию, мой Aiphone сломался =( а потом я узнал про ЧИНИТЕЛИ inc. Они починили мой телефон и даже сделали скидку в 2 рубля
+      </td>
       </tr>
       <tr>
         <td>
-          <figure><img src="pics/krosh.jpg" width="200" height="200" alt="картинка профиля"> </figure></td>
-        <td><a href="vk.com/223416631">Питер Петигрю</a></td>
-        <td>иду я как-то по улице и тут, как бац мне по голове, смотрю, а это телефон, хороший такой, от компании Xiamo, -"Эх, а я ведь всегда мечтал о своём Xiamo", подумал я, заменил корпус, работает хорошо</td>
+          <figure>
+            <img src="pics/krosh.jpg" width="200" height="200" alt="картинка профиля">
+          </figure>
+        </td>
+        <td>
+          <a href="vk.com/223416631">Питер Петигрю</a>
+        </td>
+        <td>
+        иду я как-то по улице и тут, как бац мне по голове, смотрю, а это телефон, хороший такой, от компании Xiamo, -"Эх, а я ведь всегда мечтал о своём Xiamo", подумал я, заменил корпус, работает хорошо
+        </td>
       </tr>
       <tr>
         <td>
-          <figure><img src="pics/bash.jpg" width="200" height="200" alt="картинка профиля"> </figure></td>
-        <td><a href="vk.com/824612831">Анатолий</a></td>
-        <td>прихожу я домой, начинаю проверять карманы, а карманов у меня много, ну думаю, чего уж там возиться, начал прыгать, кувыркаться, да так сильно, что карманы расстегнулись и всё выпало наружу. GG снова со мной, благодаря ЧИНИТЕЛИ inc</td>
+          <figure>
+            <img src="pics/bash.jpg" width="200" height="200" alt="картинка профиля">
+          </figure>
+        </td>
+        <td>
+          <a href="vk.com/824612831">Анатолий</a>
+        </td>
+        <td>
+        прихожу я домой, начинаю проверять карманы, а карманов у меня много, ну думаю, чего уж там возиться, начал прыгать, кувыркаться, да так сильно, что карманы расстегнулись и всё выпало наружу. GG снова со мной, благодаря ЧИНИТЕЛИ inc
+        </td>
       </tr>
       <tr>
         <td>
-          <figure><img src="pics/mortred.png" width="200" height="200" alt="картинка профиля"> </figure></td>
-        <td><a href="vk.com/7442851">Татьяна</a></td>
-        <td>варю я значит суп, а в квартире жарко, открываю форточку и наслаждаюсь бризом, одна из перелётных птиц решила заглянуть ко мне на чай, ах, как жаль, что в тот момент я была с головой в телефоне, в итоге пришлось заменить динамик и 2 ногтя</td>
+          <figure><img src="pics/mortred.png" width="200" height="200" alt="картинка профиля"></figure>
+        </td>
+        <td>
+          <a href="vk.com/7442851">Татьяна</a>
+        </td>
+        <td>
+        варю я значит суп, а в квартире жарко, открываю форточку и наслаждаюсь бризом, одна из перелётных птиц решила заглянуть ко мне на чай, ах, как жаль, что в тот момент я была с головой в телефоне, в итоге пришлось заменить динамик и 2 ногтя
+        </td>
       </tr>
       <tr>
         <td>
-          <figure><img src="pics/foxxy.jpg" width="200" height="200" alt="картинка профиля"> </figure></td>
-        <td><a href="vk.com/3129412">Дрэд</a></td>
-        <td>обычный день на работе: отстреливаю нарушителей закона, ловлю беглых преступников, выслеживаю наркодиллеров.... так я думал. *Фьюю!* пуля пролетела мимо виска, такого я не ожидал, снайпер,северо-запад, 200 метров. Вытаскиваю драгунов из-за спины...
-          слишком быстро, задел проходящую мимо бабушку, её телефон разбился при падении, экран ей заменили всё хорошо</td>
+          <figure><img src="pics/foxxy.jpg" width="200" height="200" alt="картинка профиля"> </figure>
+        </td>
+        <td>
+          <a href="vk.com/3129412">Дрэд</a>
+        </td>
+        <td>
+          обычный день на работе: отстреливаю нарушителей закона, ловлю беглых преступников, выслеживаю наркодиллеров.... так я думал. *Фьюю!* пуля пролетела мимо виска, такого я не ожидал, снайпер,северо-запад, 200 метров. Вытаскиваю драгунов из-за спины...
+          слишком быстро, задел проходящую мимо бабушку, её телефон разбился при падении, экран ей заменили всё хорошо
+        </td>
       </tr>
     </table>
     <br>
@@ -78,7 +123,7 @@
         <br>
         <label>
         <input type="radio" value="1" name="star quantity">Ужасно!
-      </label>
+        </label>
         <label>
           <input type="radio" value="2" name="star quantity">Плохо!
         </label>
