removed frameborder attr

--- a/homework_3/feed.html
+++ b/homework_3/feed.html
@@ -18,7 +18,7 @@
   				БэдФанат
   			</td>
   			<td>
-  				<iframe width="800" height="500" src="https://www.youtube.com/embed/FbrUZhX_haQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  				<iframe width="800" height="500" src="https://www.youtube.com/embed/FbrUZhX_haQ" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   			</td>
   			<td>
   				умиляемся кинематографу <a href="feed.html">#Бэда_в_президенты</a>
@@ -47,7 +47,7 @@
   				Лысый Чел
   			</td>
   			<td>
-  				<iframe width="800" height="500" src="https://www.youtube.com/embed/o268qbb_0BM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  				<iframe width="800" height="500" src="https://www.youtube.com/embed/o268qbb_0BM" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   			</td>
   			<td>
   				рассказывает ерунду, но слушать интересно :)<a href="feed.html">#просвящаемся</a>
@@ -76,7 +76,7 @@
   				idoopz
   			</td>
   			<td>
-  				<iframe width="800" height="500" src="https://www.youtube.com/embed/W5moUUFhmZM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  				<iframe width="800" height="500" src="https://www.youtube.com/embed/W5moUUFhmZM" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   			</td>
   			<td>
   				в чём разница между двумя картинками? <a href="feed.html">#непонятно</a>
@@ -105,7 +105,7 @@
   				АнимеЧел
   			</td>
   			<td>
-  				<iframe width="800" height="500" src="https://www.youtube.com/embed/MqDlfqmUlcg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  				<iframe width="800" height="500" src="https://www.youtube.com/embed/MqDlfqmUlcg" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   			</td>
   			<td>
   				крутяк <a href="feed.html">#аниме</a>
@@ -134,7 +134,7 @@
   				Мультофаг
   			</td>
   			<td>
-  				<iframe width="800" height="500" src="https://www.youtube.com/embed/v3_KOGaqhdw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  				<iframe width="800" height="500" src="https://www.youtube.com/embed/v3_KOGaqhdw" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   			</td>
   			<td>
   				играл я в паразита <a href="feed.html">#паразит</a>
