fixed href on comments

--- a/homework_2/index.html
+++ b/homework_2/index.html
@@ -22,7 +22,7 @@
           </header>
         </li>
         <li>
-          <header><a href="/comments.html" title="Отзывы">Отзывы</a></header>
+          <header><a href="comments.html" title="Отзывы">Отзывы</a></header>
         </li>
         <li>
           <header><a href="#Связаться_с_нами" title="Наши контакты">Связаться с нами</a></header>
