css for kool button

--- a/homework2_task2/product.html
+++ b/homework2_task2/product.html
@@ -4,6 +4,7 @@
 
   <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="main.css">
     <title>
       Cannon-17244
     </title>
@@ -15,10 +16,13 @@
         Вы попали к нам на Стройплощадку!<br> наш сайт предоставляет оргтех-товары по доступным ценам с доставкой по городу
       </h1>
     </div>
-    <a href="index.html" title="Вернуться на главную страницу">
+    <div>
       <h3>
-        Вернуться в каталог</h3>
-    </a>
+        <a class="button" href="index.html" title="Вернуться на главную страницу">
+        Вернуться в каталог
+        </a>
+      </h3>
+  </div>
     <div>
       <table border='1' cellspacing='5' cellpadding='5'>
         <tr>
